@startuml

title __DATA's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      abstract class es.ull.patrones.data.Attribute {
          - index : int
          - name : String
          + Attribute()
          + Attribute()
          {abstract} + getArrayInt()
          {abstract} + getArrayString()
          {abstract} + getChain()
          + getIndex()
          + getName()
          {abstract} + getValue()
          + setIndex()
          + setName()
          {abstract} # setChain()
          {abstract} # setValue()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.CSVReader {
          - attributes : ArrayList<Attribute>
          - nCols : int
          - nRows : int
          - nameFile : String
          + CSVReader()
          + getAttributes()
          + getCols()
          + getFileName()
          + getRows()
          + printFile()
          + readFile()
          + setCols()
          + setFileName()
          + setRows()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.Categorical {
          - chains : ArrayList<String>
          + Categorical()
          + getArrayInt()
          + getArrayString()
          + getChain()
          + getValue()
          + setChain()
          # setValue()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.HTTPFileDownloader {
          {static} + downloadFromURL()
          ~ HTTPFileDownloader()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.data {
      class es.ull.patrones.data.Numeric {
          - values : ArrayList<Integer>
          + Numeric()
          + getArrayInt()
          + getArrayString()
          + getChain()
          + getValue()
          + setValue()
          # setChain()
      }
    }
  }
  

  es.ull.patrones.data.Categorical -up-|> es.ull.patrones.data.Attribute
  es.ull.patrones.data.Numeric -up-|> es.ull.patrones.data.Attribute


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
